--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -56,4 +56,4 @@
 </table>
 
 <script src="/socket.io/socket.io.js"></script>
-<script src="/index.js"></script>
+<script src="/js/index.js"></script>
